--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "semantic-ui": "^2.2.13"
   },
   "devDependencies": {},
