--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "unicon2018",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.12.0"
+  },
   "description": "",
   "main": "app.js",
   "dependencies": {
